"Update Main class remove unused import  solution"